--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Sense Forage",
   "engines": {
     "node": "0.10.x",
-    "npm": "1.4.x"
+    "npm": "*"
   },
   "scripts": {
     "start": "grunt",
@@ -14,33 +14,33 @@
   },
   "dependencies": {
     "async": "^0.9.2",
-    "body-parser": "^1.9.3",
-    "bower": "^1.3.12",
+    "body-parser": "^1.13.1",
+    "bower": "^1.4.1",
     "chalk": "^0.5.1",
-    "compression": "^1.2.2",
+    "compression": "^1.5.0",
     "connect-flash": "~0.1.1",
     "connect-mongo": "^0.4.2",
     "consolidate": "^0.10.0",
     "cookie-parser": "~1.3.2",
-    "express": "^4.10.8",
-    "express-session": "^1.9.3",
+    "express": "^4.13.0",
+    "express-session": "^1.11.3",
     "forever": "^0.11.1",
-    "glob": "^4.0.6",
+    "glob": "^4.5.3",
     "grunt-cli": "~0.1.13",
     "helmet": "^0.5.4",
     "lodash": "^2.4.2",
     "method-override": "~2.3.0",
-    "mongoose": "^3.8.31",
-    "morgan": "^1.4.1",
+    "mongoose": "^3.9.7",
+    "morgan": "^1.6.0",
     "nodemailer": "~1.3.0",
     "passport": "~0.2.0",
     "passport-facebook": "^1.0.3",
     "passport-github": "~0.1.5",
     "passport-google-oauth": "~0.1.5",
+    "passport-http": "~0.2.2",
     "passport-linkedin": "~0.1.3",
     "passport-local": "~1.0.0",
     "passport-twitter": "~1.0.2",
-    "passport-http": "~0.1.18",
     "swig": "~1.4.1"
   },
   "devDependencies": {
