--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "passport-http": "~0.2.2",
     "passport-linkedin": "~0.1.3",
     "passport-local": "~1.0.0",
+    "passport-token-auth": "^0.1.2",
     "passport-twitter": "~1.0.2",
     "swig": "~1.4.1"
   },
