--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,6 @@
     "angular-bootstrap": "~0.11.2",
     "angular-ui-utils": "~0.1.1",
     "angular-ui-router": "~0.2.11",
-    "angular-socialshare": "~1.4.1"
+    "angular-social": "~1.0.0"
   }
 }
