--- a/bower.json
+++ b/bower.json
@@ -15,5 +15,8 @@
     "angular-ui-utils": "~0.1.1",
     "angular-ui-router": "~0.2.11",
     "angular-social": "~1.0.0"
+  },
+  "resolutions": {
+    "angular": "1.2.28"
   }
 }
