--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "angular-bootstrap": "~0.11.2",
     "angular-ui-utils": "~0.1.1",
     "angular-ui-router": "~0.2.11",
-    "angular-social": "~1.0.0"
+    "angular-social": "~1.0.0",
+    "angular-slugify": "~1.0.1"
   },
   "resolutions": {
     "angular": "1.2.28"
