--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "passport-local": "~1.0.0",
     "passport-token-auth": "^0.1.2",
     "passport-twitter": "~1.0.2",
+    "prerender-node": "^1.2.1",
     "swig": "~1.4.1"
   },
   "devDependencies": {
